--- a/doctor-registration/src/main/resources/application.properties
+++ b/doctor-registration/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.port= 9094
+spring.application.name= doctor-registration
+spring.datasource.url=jdbc:mysql://localhost:3306/microservico_cadastro_medico?allowPublicKeyRetrieval=true&sslMode=DISABLED
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jackson.default-property-inclusion=non-null
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jmx.enabled=true
+management.endpoints.web.exposure.include=hawtio,jolokia
+hawtio.authenticationEnabled=false
+
 
