--- a/specialty-registration/build.gradle
+++ b/specialty-registration/build.gradle
@@ -24,6 +24,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'mysql:mysql-connector-java'
+	implementation group: 'io.hawt', name: 'hawtio-springboot', version: '2.4.0'
 }
 
 test {
